# opengl_leanring

./: .gitignore  CMakeLists.txt
code/include/glad/: glad.h
code/src/: glad.c  main.cpp
docker/: Dockerfile  container_base.sh  docker_adduser.sh  docker_base.sh  into_docker.sh  setup_opengl.sh  start_docker.sh
include/glad/: glad.h
scripts/: install_zsh.sh
src/: Shader.cpp  Shader.h  glad.c  main.cpp
src/LightLesson/: CMakeLists.txt  main.cpp
src/Shader/: first.fs  first.vs  second.fs  second.vs
src/multiLight/: CMakeLists.txt  main.cpp  multiLight.fs  multiLight.vs
src/triangle/: triangle.cpp
src/util/: CMakeLists.txt  camera.cpp  camera.h  light.cpp  light.h  shader.cpp  shader.h  texture.h
